--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,10 @@
         <activity
             android:name=".TabMain"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".PantallaProducto" />
-        <activity android:name=".PantallaInicio"
+        <activity
+            android:name=".PantallaInicio"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +26,14 @@
         <activity
             android:name=".CategoriasActivity"
             android:label="@string/title_activity_categorias"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".AcercaDe"
+            android:label="@string/title_activity_acerca_de"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Formulario_Producto"
+            android:label="@string/title_activity_formulario__producto"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
